# sc2bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  bots.h
src/core/actors/: atomic_forward_list.h  msg.h  value_holder_node.h
src/core/bots/: hello_bot.cpp  no_minerals_bot.cpp  no_vespen_bot.cpp
src/core/info/: race_info.h
src/core/model/: model.h
src/core/util/: checker.cpp  checker.h  find.cpp  find.h  types.h
src/runners/: CMakeLists.txt  hello_world.cpp  no_vespen.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  atomic_stack_queue.cpp
test/unittests/: CMakeLists.txt  tmp.cpp
test/unittests/ core/actors/: atomic_forward_list.cpp
